--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,107 @@ google fonts
 body{
     font-family: 'Roboto', sans-serif;
 }
+header, main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /* -------------
 header style start 
 --------------*/
 .container{
-    display:;
+    width:992px;
+    background: #262626;
+    border-radius: 24px;
+}
+.header-wrap{
+    display:flex;
+}
+.header-info{
+    width:50%;
+    padding: 34px 50px;
+}
+.header-info h1{
+    color: #ffffff;
+    font-size: 58px;
+    font-weight: 800;
+    padding-bottom: 22px;
+}
+.header-info p{
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 19px;
+    padding-bottom: 24px;
+}
+.fa-angle-right{
+    margin-left: 6px;
+}
+.header-info a{
+    display:
+    block;
+    text-decoration: none;
+    background-color:
+    orangered;
+    color: #ffffff;
+    width: 23%;
+    padding: 12px 15px;
+    border-radius: 6px;
+    animation-name:animate;
+    animation-duration:2s;
+}
+/*---------
+     animate
+----------- */
+@keyframes animate {
+    0%{
+        background-color:green;
+        color: #ffffff;
+    }
+    50%{
+        background:blueviolet;
+        color: #ffffff;
+    }
+    100%{
+        background-color: yellow;
+        color: #ffffff;
+    }
+}
+.header-thumbnail{
+    width:50%;
+    padding-right: 40px;
+}
+.header-thumbnail img{
+    width:100%;
+    vertical-align: middle;
+}
+/*--------------
+    responsive style
+------------- */
+@media screen and (max-width:576px){
+    .header-wrap{
+        flex-direction: column;
+        align-items: center;
+    }
+    .container{
+        width:100%;
+    }
+    /* .header-info {
+        padding: 0;
+     }  */
+    .header-info h1{
+        justify-content:
+        center;
+        font-size: 31px;
+        text-align: center;
+    }
+    .header-info a{
+        width: 55%;
+        text-align: center;
+        margin: 0 auto;
+    }
+    .header-thumbnail{
+        padding:0;
+    }
 }
 /* -------------
 header style end 
